adding aistats paper

--- a/leili.bib
+++ b/leili.bib
@@ -63,12 +63,6 @@
   year   = {2020},
 }
 
-@Unpublished{song2020improving,
-  author = {Yuxuan Song and Ning Miao and Hao Zhou and Lantao Yu and Mingxuan Wang and Lei Li},
-  title  = {Improving Maximum Likelihood Training for Text Generation with Density Ratio Estimation},
-  year   = {2020},
-}
-
 @Unpublished{sun2020diving,
   author = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
   title  = {Diving into Document-Level Neural Machine Translation},
@@ -91,6 +85,15 @@
   author = {An Yan and Xin Wang and Jiangtao Feng and Lei Li and William Yang Wang},
   title  = {Cross-Lingual Vision-Language Navigation},
   year   = {2020},
+}
+
+@InProceedings{song2020improving,
+  author    = {Yuxuan Song and Ning Miao and Hao Zhou and Lantao Yu and Mingxuan Wang and Lei Li},
+  booktitle = {The 23rd International Conference on Artificial Intelligence and Statistics (AIStats)},
+  title     = {Improving Maximum Likelihood Training for Text Generation with Density Ratio Estimation},
+  year      = {2020},
+  month     = jun,
+  timestamp = {2020-01-07},
 }
 
 @InProceedings{ye2020variational,
