adding acl papers

--- a/leili.bib
+++ b/leili.bib
@@ -39,12 +39,6 @@
   year   = {2020},
 }
 
-@Unpublished{miao2020do,
-  author = {Ning Miao and Yuxuan Song and Hao Zhou and Lei Li},
-  title  = {Do you have the right scissors? Tailoring Pre-trained Language Models via Monte-Carlo Methods},
-  year   = {2020},
-}
-
 @Unpublished{pan2020pretraining,
   author = {Xiao Pan and Mingxuan Wang and Jiangtao Feng and Hao Zhou and Lei Li},
   title  = {Pretraining Neural Machine Translation by Pretrained Neural Machine Translation},
@@ -87,6 +81,16 @@
   year   = {2020},
 }
 
+@InProceedings{ru2020quachie,
+  author       = {Dongyu Ru and Zhenghui Wang and Lin Qiu and Hao Zhou and Lei Li and Weinan Zhang and Yong Yu},
+  booktitle    = {the 43rd International ACM SIGIR Conference on Research and Development in Information Retrieval - System Demonstrations},
+  title        = {{QuAChIE}: Question Answering based Chinese Information Extraction System},
+  year         = {2020},
+  month        = jul,
+  entrysubtype = {demo},
+  owner        = {lilei.02},
+}
+
 @InProceedings{song2020improving,
   author    = {Yuxuan Song and Ning Miao and Hao Zhou and Lantao Yu and Mingxuan Wang and Lei Li},
   booktitle = {The 23rd International Conference on Artificial Intelligence and Statistics (AIStats)},
@@ -94,6 +98,28 @@
   year      = {2020},
   month     = jun,
   timestamp = {2020-01-07},
+}
+
+@InProceedings{miao2020do,
+  author    = {Ning Miao and Yuxuan Song and Hao Zhou and Lei Li},
+  booktitle = {the 58th Annual Meeting of the Association for Computational Linguistics (ACL) - short papers},
+  title     = {Do you have the right scissors? Tailoring Pre-trained Language Models via Monte-Carlo Methods},
+  year      = {2020},
+  month     = jun,
+  abstract  = {It has been a common approach to pre-train a language model on a large corpus and fine-tune it on task-specific data.  In practice, we observe that fine-tuning a pre-trained model on a small dataset may lead to  over- and/or under-estimation problem.  In this paper, we propose MC-Taylor, a novel method to alleviate the above issue in text generation tasks by truncating and transferring the probability mass from over-estimated regions to under-estimated ones. Experiments on a variety of text generation datasets show that MC-Taylor consistently and significantly outperforms the fine-tuning approach. Our code is available at \url{https://github.com/NingMiao/MC-tailor}.},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{xu2020xiaomingbot,
+  author       = {Runxin Xu and Jun Cao and Mingxuan Wang and Jiaze Chen and Hao Zhou and Ying Zeng and Yuping Wang and Li Chen and Xiang Yin and Xijin Zhang and Songcheng Jiang and Yuxuan Wang and Lei Li},
+  booktitle    = {the 58th Annual Meeting of the Association for Computational Linguistics: System Demonstrations},
+  title        = {Xiaomingbot: A Multilingual Robot News Reporter},
+  year         = {2020},
+  month        = jun,
+  abstract     = {This paper proposes the building of Xiaomingbot, an intelligent, multilingual and multi-modal software robot equipped with four integral capabilities: news generation, news translation, news reading and avatar animation. Its system summarizes Chinese news that it automatically generates from data tables. Next, it translates the summary or the full article into multiple languages, and reads the multilingual rendition through synthesized speech. Notably, Xiaomingbot utilizes a voice cloning technology to synthesize the speech trained from a real person’s voice data in one input language. The proposed system enjoys several merits: it has an animated avatar, and is able to generate and read multilingual news. Since it was put into practice, Xiaomingbot has written over 600,000 articles, and gained over 150,000 followers on social media platforms.},
+  entrysubtype = {demo},
+  timestamp    = {2020-05-01},
+  url          = {https://xiaomingbot.github.io},
 }
 
 @InProceedings{ye2020variational,
@@ -243,16 +269,16 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
 }
 
 @InProceedings{sun2019graspsnooker,
-  author    = {Sun, Zhaoyue and Chen, Jiaze and Zhou, Hao and Zhou, Deyu and Li, Lei and Jiang, Mingmin},
-  booktitle = {the 28th International Joint Conference on Artificial Intelligence ({IJCAI})},
-  title     = {{GraspSnooker}: Automatic {Chinese} Commentary Generation for Snooker Videos},
-  year      = {2019},
-  month     = aug,
-  note      = {Demos},
-  pages     = {6569--6571},
-  addendum  = {Demo},
-  doi       = {10.24963/ijcai.2019/959},
-  url       = {https://doi.org/10.24963/ijcai.2019/959},
+  author       = {Sun, Zhaoyue and Chen, Jiaze and Zhou, Hao and Zhou, Deyu and Li, Lei and Jiang, Mingmin},
+  booktitle    = {the 28th International Joint Conference on Artificial Intelligence ({IJCAI})},
+  title        = {{GraspSnooker}: Automatic {Chinese} Commentary Generation for Snooker Videos},
+  year         = {2019},
+  month        = aug,
+  pages        = {6569--6571},
+  addendum     = {Demo},
+  doi          = {10.24963/ijcai.2019/959},
+  entrysubtype = {demo},
+  url          = {https://doi.org/10.24963/ijcai.2019/959},
 }
 
 @InProceedings{weng2019correct,
