--- a/leili.bib
+++ b/leili.bib
@@ -108,6 +108,7 @@
   month     = jun,
   abstract  = {It has been a common approach to pre-train a language model on a large corpus and fine-tune it on task-specific data.  In practice, we observe that fine-tuning a pre-trained model on a small dataset may lead to  over- and/or under-estimation problem.  In this paper, we propose MC-Taylor, a novel method to alleviate the above issue in text generation tasks by truncating and transferring the probability mass from over-estimated regions to under-estimated ones. Experiments on a variety of text generation datasets show that MC-Taylor consistently and significantly outperforms the fine-tuning approach. Our code is available at \url{https://github.com/NingMiao/MC-tailor}.},
   timestamp = {2020-05-01},
+  topic     = {nlp}
 }
 
 @InProceedings{xu2020xiaomingbot,
@@ -120,6 +121,7 @@
   entrysubtype = {demo},
   timestamp    = {2020-05-01},
   url          = {https://xiaomingbot.github.io},
+  topic        = {nlp}
 }
 
 @InProceedings{ye2020variational,
