--- a/leili.bib
+++ b/leili.bib
@@ -33,6 +33,16 @@
   year   = {2020},
 }
 
+@Article{kong2020foveabox,
+  author  = {Tao {Kong} and Fuchun {Sun} and Huaping {Liu} and Yuning {Jiang} and Lei {Li} and Jianbo {Shi}},
+  journal = {IEEE Transactions on Image Processing},
+  title   = {{FoveaBox}: Beyound Anchor-based Object Detection},
+  year    = {2020},
+  issn    = {1057-7149},
+  pages   = {1-10},
+  doi     = {10.1109/TIP.2020.3002345},
+}
+
 @Unpublished{li2020bidirectional,
   author = {Mingwei Li and Qingyuan Jiang and Yi He and Lei Li and Wujun Li},
   title  = {Bidirectional Attentive Convolutional Neural Network for Near-Duplicate Video Retrieval},
@@ -48,12 +58,6 @@
 @Unpublished{ru2020active,
   author = {Dongyu Ru and Yating Luo and Lin Qiu and Hao Zhou and Lei Li and Weinan Zhang and Yong Yu},
   title  = {Active Sentence Learning by Adversarial Uncertainty Sampling in Discrete Space},
-  year   = {2020},
-}
-
-@Unpublished{shi2020dispersed,
-  author = {Wenxian Shi and Hao Zhou and Ning Miao and Lei Li},
-  title  = {Dispersing Exponential Family Mixture VAEs},
   year   = {2020},
 }
 
@@ -81,9 +85,26 @@
   year   = {2020},
 }
 
+@InProceedings{song2020improving,
+  author    = {Yuxuan Song and Ning Miao and Hao Zhou and Lantao Yu and Mingxuan Wang and Lei Li},
+  booktitle = {The 23rd International Conference on Artificial Intelligence and Statistics (AISTATS)},
+  title     = {Improving Maximum Likelihood Training for Text Generation with Density Ratio Estimation},
+  year      = {2020},
+  month     = aug,
+  timestamp = {2020-01-07},
+}
+
+@InProceedings{shi2020dispersed,
+  author    = {Wenxian Shi and Hao Zhou and Ning Miao and Lei Li},
+  booktitle = {Proceedings of the 37th International Conference on Machine learning (ICML)},
+  title     = {Dispersing Exponential Family Mixture VAEs for Interpretable Text Generation},
+  year      = {2020},
+  month     = jul,
+}
+
 @InProceedings{ru2020quachie,
   author       = {Dongyu Ru and Zhenghui Wang and Lin Qiu and Hao Zhou and Lei Li and Weinan Zhang and Yong Yu},
-  booktitle    = {the 43rd International ACM SIGIR Conference on Research and Development in Information Retrieval - System Demonstrations},
+  booktitle    = {the 43rd International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR) - System Demonstrations},
   title        = {{QuAChIE}: Question Answering based Chinese Information Extraction System},
   year         = {2020},
   month        = jul,
@@ -91,35 +112,37 @@
   owner        = {lilei.02},
 }
 
-@InProceedings{song2020improving,
-  author    = {Yuxuan Song and Ning Miao and Hao Zhou and Lantao Yu and Mingxuan Wang and Lei Li},
-  booktitle = {The 23rd International Conference on Artificial Intelligence and Statistics (AIStats)},
-  title     = {Improving Maximum Likelihood Training for Text Generation with Density Ratio Estimation},
-  year      = {2020},
-  month     = jun,
-  timestamp = {2020-01-07},
-}
-
 @InProceedings{miao2020do,
   author    = {Ning Miao and Yuxuan Song and Hao Zhou and Lei Li},
   booktitle = {the 58th Annual Meeting of the Association for Computational Linguistics (ACL) - short papers},
   title     = {Do you have the right scissors? Tailoring Pre-trained Language Models via Monte-Carlo Methods},
   year      = {2020},
-  month     = jun,
+  month     = jul,
   abstract  = {It has been a common approach to pre-train a language model on a large corpus and fine-tune it on task-specific data.  In practice, we observe that fine-tuning a pre-trained model on a small dataset may lead to  over- and/or under-estimation problem.  In this paper, we propose MC-Taylor, a novel method to alleviate the above issue in text generation tasks by truncating and transferring the probability mass from over-estimated regions to under-estimated ones. Experiments on a variety of text generation datasets show that MC-Taylor consistently and significantly outperforms the fine-tuning approach. Our code is available at \url{https://github.com/NingMiao/MC-tailor}.},
   timestamp = {2020-05-01},
 }
 
 @InProceedings{xu2020xiaomingbot,
   author       = {Runxin Xu and Jun Cao and Mingxuan Wang and Jiaze Chen and Hao Zhou and Ying Zeng and Yuping Wang and Li Chen and Xiang Yin and Xijin Zhang and Songcheng Jiang and Yuxuan Wang and Lei Li},
-  booktitle    = {the 58th Annual Meeting of the Association for Computational Linguistics: System Demonstrations},
+  booktitle    = {the 58th Annual Meeting of the Association for Computational Linguistics (ACL): System Demonstrations},
   title        = {Xiaomingbot: A Multilingual Robot News Reporter},
   year         = {2020},
-  month        = jun,
+  month        = jul,
   abstract     = {This paper proposes the building of Xiaomingbot, an intelligent, multilingual and multi-modal software robot equipped with four integral capabilities: news generation, news translation, news reading and avatar animation. Its system summarizes Chinese news that it automatically generates from data tables. Next, it translates the summary or the full article into multiple languages, and reads the multilingual rendition through synthesized speech. Notably, Xiaomingbot utilizes a voice cloning technology to synthesize the speech trained from a real person’s voice data in one input language. The proposed system enjoys several merits: it has an animated avatar, and is able to generate and read multilingual news. Since it was put into practice, Xiaomingbot has written over 600,000 articles, and gained over 150,000 followers on social media platforms.},
   entrysubtype = {demo},
   timestamp    = {2020-05-01},
   url          = {https://xiaomingbot.github.io},
+}
+
+@Article{wu2020towards,
+  author  = {Wu, Fei and Lu, Cewu and Zhu, Mingjie and Chen, Hao and Zhu, Jun and Yu, Kai and Li, Lei and Li, Ming and Chen, Qianfeng and Li, Xi and Cao, Xudong and Wang, Zhongyuan and Zha, Zhengjun and Zhuang, Yueting and Pan, Yunhe},
+  journal = {Nature Machine Intelligence},
+  title   = {Towards a new generation of artificial intelligence in China},
+  year    = {2020},
+  month   = jun,
+  pages   = {312-316},
+  volume  = {2},
+  doi     = {10.1038/s42256-020-0183-4},
 }
 
 @InProceedings{ye2020variational,
@@ -492,7 +515,7 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{dai2016cfo,
   author    = {Dai, Zihang and Li, Lei and Xu, Wei},
-  booktitle = {ACL},
+  booktitle = {the 54th Annual Meeting of the Association for Computational Linguistics (ACL)},
   title     = {{CFO}: Conditional Focused Neural Question Answering with Large-scale Knowledge Bases},
   year      = {2016},
   month     = jul,
@@ -558,8 +581,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2013dynamic,
   author    = {Li, Lei and Ramsundar, Bharath and Russell, Stuart},
+  booktitle = {16th International Conference on Artificial Intelligence and Statistics (AISTATS)},
   title     = {Dynamic Scaled Sampling for Deterministic Constraints},
-  booktitle = {16th International Conference on Artificial Intelligence and Statistics},
   year      = {2013},
   abstract  = {Deterministic and near-deterministic relationships among subsets of random variables in multivariate systems are known to cause serious problems for Monte Carlo algorithms. We examine the case in which the relationship Z = f(X1,...,Xk) holds, where each Xi has a continuous prior pdf and we wish to obtain samples from the conditional distribution P(X1,...,Xk | Z = s). When f is addition, the problem is NP-hard even when the Xi are independent. In more restricted cases—for example, i.i.d. Boolean or categorical Xi—efficient exact samplers have been obtained previously. For the general continuous case, we propose a dynamic scaling algorithm (DYSC), and prove that it has O(k) expected running time and finite variance. We discuss generalizations of DYSC to functions f described by binary operation trees. We evaluate the algorithm on several examples.},
   file      = {:pubs/li2013dynamic - Dynamic Scaled Sampling for Deterministic Constraints.pdf:PDF},
@@ -580,8 +603,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{liu2013hibernating,
   author    = {Liu, Siyuan and Li, Lei and Krishnan, Ramayya},
+  booktitle = {IEEE International Conference on Data Mining (ICDM)},
   title     = {Hibernating Process: Modelling Mobile Calls at Multiple Scales},
-  booktitle = {IEEE International Conference on Data Mining},
   year      = {2013},
   file      = {:pubs/liu2013hibernating - Hibernating Process_ Modelling Mobile Calls at Multiple Scales.pdf:PDF},
   owner     = {leili},
@@ -590,11 +613,11 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{erol2013extended,
   author    = {Erol, Yusuf and Li, Lei and Ramsundar, Bharath and Russell, Stuart J.},
+  booktitle = {Proceedings of the 30th International Conference on Machine learning (ICML)},
   title     = {The Extended Parameter Filter},
-  booktitle = {Proceedings of the 30th International Conference on Machine learning},
   year      = {2013},
-  comment      = {The full version appeared as Tech. Rep. UCB/EECS-2013-48.},
   abstract  = {The parameters of temporal models, such as dynamic Bayesian networks, may be modelled in a Bayesian context as static or atemporal variables that influence transition probabilities at every time step. Particle filters fail for models that include such variables, while methods that use Gibbs sampling of parameter variables may incur a per-sample cost that grows linearly with the length of the observation sequence. Storvik devised a method for incremental computation of exact sufficient statistics that, for some cases, reduces the per-sample cost to a constant. In this paper, we demonstrate a connection between Storvik's filter and a Kalman filter in parameter space and establish more general conditions under which Storvik's filter works. Drawing on an analogy to the extended Kalman filter, we develop and analyze, both theoretically and experimentally, a Taylor approximation to the parameter posterior that allows Storvik's method to be applied to a broader class of models. Our experiments on both synthetic examples and real applications show improvement over existing methods.},
+  comment   = {The full version appeared as Tech. Rep. UCB/EECS-2013-48.},
   file      = {:pubs/erol2013extended - The Extended Parameter Filter.pdf:PDF},
   owner     = {leili},
   timestamp = {2013.05.08},
@@ -646,7 +669,7 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{henderson2012rolx,
   author    = {Henderson, Keith and Gallagher, Brian and Eliassi-Rad, Tina and Tong, Hanghang and Basu, Sugato and Akoglu, Leman and Koutra, Danai and Faloutsos, Christos and Li, Lei},
-  booktitle = {KDD '12: Proceeding of the 18th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  booktitle = {Proceeding of the 18th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
   title     = {{RolX}: Structural Role Extraction and Mining in Large Graphs},
   year      = {2012},
   address   = {New York, NY, USA},
@@ -658,8 +681,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{matsubara2012rise,
   author    = {Matsubara, Yasuko and Sakurai, Yasushi and Prakash, B. Aditya and Li, Lei and Faloutsos, Christos},
+  booktitle = {Proceeding of the 18th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
   title     = {Rise and Fall Patterns of Information Diffusion: Model and Implications},
-  booktitle = {KDD '12: Proceeding of the 18th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   year      = {2012},
   address   = {New York, NY, USA},
   publisher = {ACM},
@@ -681,8 +704,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{henderson2011its,
   author    = {Henderson, Keith and Gallagher, Brian and Li, Lei and Akoglu, Leman and Eliassi-Rad, Tina and Tong, Hanghang and Faloutsos, Christos},
+  booktitle = {Proceeding of the 17th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
   title     = {It's Who You Know: Graph Mining Using Recursive Structural Features},
-  booktitle = {KDD '11: Proceeding of the 17th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   year      = {2011},
   address   = {New York, NY, USA},
   publisher = {ACM},
@@ -695,7 +718,7 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2011thermocast,
   author    = {Li, Lei and Liang, Chieh-Jan Mike and Liu, Jie and Nath, Suman and Terzis, Andreas and Faloutsos, Christos},
-  booktitle = {KDD '11: Proceeding of the 17th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  booktitle = {Proceeding of the 17th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
   title     = {{ThermoCast}: A Cyber-Physical Forecasting Model for Data Centers},
   year      = {2011},
   address   = {New York, NY, USA},
@@ -711,10 +734,10 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2011time,
   author    = {Li, Lei and Prakash, B. Aditya},
+  booktitle = {Proceedings of the 28th International Conference on Machine Learning (ICML)},
   title     = {Time Series Clustering: Complex is Simpler!},
-  booktitle = {Proceedings of the 28th International Conference on Machine learning},
   year      = {2011},
-  comment      = {Please see for updated and additional experiments in Chap 5 of the thesis "Fast algorithms for mining co-evolving time series".},
+  comment   = {Please see for updated and additional experiments in Chap 5 of the thesis "Fast algorithms for mining co-evolving time series".},
   file      = {:pubs/li2011time - Time Series Clustering_ Complex is Simpler!.pdf:PDF;Dataset1-mocap16:software/li2011time - Time Series Clustering_ Complex is Simpler!.zip:URL;Dataset2-mocap35:software/mocap35-rfoot_amc.zip:URL},
   location  = {Bellevue, Washington},
   numpages  = {8},
@@ -726,7 +749,7 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{sakurai2011windmine,
   author    = {Sakurai, Yasushi and Li, Lei and Matsubara, Yasuko and Faloutsos, Christos},
-  booktitle = {SIAM International Conference on Data Mining},
+  booktitle = {SIAM International Conference on Data Mining (SDM)},
   title     = {{WindMine}: Fast and Effective Mining of Web-click Sequences},
   year      = {2011},
   file      = {:pubs/sakurai2011windmine - WindMine_ Fast and Effective Mining of Web-click Sequences.pdf:PDF},
@@ -760,13 +783,13 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{henderson2010metric,
   author    = {Henderson, Keith and Eliassi-Rad, Tina and Faloutsos, Christos and Akoglu, Leman and Li, Lei and Maruhashi, Koji and Prakash, B. Aditya and Tong, Hanghang},
+  booktitle = {Proceedings of the 16th ACM SIGKDD international conference on Knowledge discovery and data mining (KDD)},
   title     = {Metric forensics: a multi-level approach for mining volatile graphs},
-  booktitle = {KDD '10: Proceedings of the 16th ACM SIGKDD international conference on Knowledge discovery and data mining},
   year      = {2010},
-  series    = {KDD '10},
-  pages     = {163--172},
   address   = {New York, NY, USA},
+  pages     = {163--172},
   publisher = {ACM},
+  series    = {KDD '10},
   doi       = {http://doi.acm.org/10.1145/1835804.1835828},
   file      = {:pubs/henderson2010metric - Metric forensics_ a multi-level approach for mining volatile graphs.pdf:PDF},
   isbn      = {978-1-4503-0055-1},
@@ -777,7 +800,7 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2010bolero,
   author    = {Li, Lei and McCann, James and Pollard, Nancy and Faloutsos, Christos},
-  booktitle = {Proceedings of the 2010 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+  booktitle = {Proceedings of the 2010 ACM SIGGRAPH/Eurographics Symposium on Computer Animation (SCA)},
   title     = {{BoLeRO}: a principled technique for including bone length constraints in motion capture occlusion filling},
   year      = {2010},
   address   = {Aire-la-Ville, Switzerland, Switzerland},
@@ -831,7 +854,7 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2009dynammo,
   author    = {Li, Lei and McCann, James and Pollard, Nancy and Faloutsos, Christos},
-  booktitle = {KDD '09: Proceeding of the 15th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle = {Proceeding of the 15th ACM SIGKDD international conference on Knowledge discovery and data mining (KDD)},
   title     = {{DynaMMo}: Mining and Summarization of Coevolving Sequences with Missing Values},
   year      = {2009},
   address   = {New York, NY, USA},
@@ -875,7 +898,7 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2008cut,
   author    = {Li, Lei and Fu, Wenjie and Guo, Fan and Mowry, Todd C. and Faloutsos, Christos},
-  booktitle = {KDD '08: Proceeding of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle = {Proceeding of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining (KDD)},
   title     = {{Cut-and-Stitch}: efficient parallel learning of linear dynamical systems on smps},
   year      = {2008},
   address   = {New York, NY, USA},
@@ -893,8 +916,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{sakurai2008efficient,
   author    = {Sakurai, Yasushi and Chong, Rosalynn and Li, Lei and Faloutsos, Christos},
+  booktitle = {SIAM International Conference on Data Mining (SDM)},
   title     = {Efficient Distribution Mining and Classification},
-  booktitle = {SIAM International Conference on Data Mining},
   year      = {2008},
   pages     = {632--643},
   ee        = {http://www.siam.org/proceedings/datamining/2008/dm08_58_sakurai.pdf},
@@ -903,8 +926,8 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{li2008laziness,
   author    = {Li, Lei and McCann, James and Faloutsos, Christos and Pollard, Nancy},
+  booktitle = {The 29th Annual Conference of the European Association for Computer Graphics (EG), Short Paper Proceedings},
   title     = {Laziness is a virtue: Motion stitching using effort minimization},
-  booktitle = {The 29th Annual Conference of the European Association for Computer Graphics, Short Paper Proceedings},
   year      = {2008},
   file      = {:pubs/li2008laziness - Laziness is a virtue_ Motion stitching using effort minimization.pdf:PDF},
   owner     = {leili},
