--- a/leili.bib
+++ b/leili.bib
@@ -94,10 +94,20 @@
   timestamp = {2020-01-07},
 }
 
+@InProceedings{wang2020solo,
+  author    = {Xinlong Wang and Tao Kong and Chunhua Shen and Yuning Jiang and Lei Li},
+  booktitle = {The European Conference on Computer Vision (ECCV)},
+  title     = {{SOLO}: {S}egmenting {O}bjects by {L}ocations},
+  year      = {2020},
+  month     = aug,
+  abstract  = {We present a new, embarrassingly simple approach to instance segmentation in images. Compared to many other dense prediction tasks, e.g., semantic segmentation, it is the arbitrary number of instances that have made instance segmentation much more challenging. In order to predict a mask for each instance, mainstream approaches either follow the 'detect-thensegment' strategy as used by Mask R-CNN, or predict category masks first then use clustering techniques to group pixels into individual instances. We view the task of instance segmentation from a completely new perspective by introducing the notion of "instance categories", which assigns categories to each pixel within an instance according to the instance's location and size, thus nicely converting instance mask segmentation into a classification-solvable problem. Now instance segmentation is decomposed into two classification tasks. We demonstrate a much simpler and flexible instance segmentation framework with strong performance, achieving on par accuracy with Mask R-CNN and outperforming recent singleshot instance segmenters in accuracy. We hope that this very simple and strong framework can serve as a baseline for many instance-level recognition tasks besides instance segmentation.},
+  url       = {https://arxiv.org/abs/1912.04488},
+}
+
 @InProceedings{shi2020dispersed,
   author    = {Wenxian Shi and Hao Zhou and Ning Miao and Lei Li},
   booktitle = {Proceedings of the 37th International Conference on Machine learning (ICML)},
-  title     = {Dispersing Exponential Family Mixture VAEs for Interpretable Text Generation},
+  title     = {Dispersing Exponential Family Mixture {VAE}s for Interpretable Text Generation},
   year      = {2020},
   month     = jul,
 }
@@ -105,7 +115,7 @@
 @InProceedings{ru2020quachie,
   author       = {Dongyu Ru and Zhenghui Wang and Lin Qiu and Hao Zhou and Lei Li and Weinan Zhang and Yong Yu},
   booktitle    = {the 43rd International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR) - System Demonstrations},
-  title        = {{QuAChIE}: Question Answering based Chinese Information Extraction System},
+  title        = {{QuAChIE}: Question Answering based {Chinese} Information Extraction System},
   year         = {2020},
   month        = jul,
   entrysubtype = {demo},
@@ -115,7 +125,7 @@
 @InProceedings{miao2020do,
   author    = {Ning Miao and Yuxuan Song and Hao Zhou and Lei Li},
   booktitle = {the 58th Annual Meeting of the Association for Computational Linguistics (ACL) - short papers},
-  title     = {Do you have the right scissors? Tailoring Pre-trained Language Models via Monte-Carlo Methods},
+  title     = {Do you have the right scissors? Tailoring Pre-trained Language Models via {Monte}-{Carlo} Methods},
   year      = {2020},
   month     = jul,
   abstract  = {It has been a common approach to pre-train a language model on a large corpus and fine-tune it on task-specific data.  In practice, we observe that fine-tuning a pre-trained model on a small dataset may lead to  over- and/or under-estimation problem.  In this paper, we propose MC-Taylor, a novel method to alleviate the above issue in text generation tasks by truncating and transferring the probability mass from over-estimated regions to under-estimated ones. Experiments on a variety of text generation datasets show that MC-Taylor consistently and significantly outperforms the fine-tuning approach. Our code is available at \url{https://github.com/NingMiao/MC-tailor}.},
@@ -137,7 +147,7 @@
 @Article{wu2020towards,
   author  = {Wu, Fei and Lu, Cewu and Zhu, Mingjie and Chen, Hao and Zhu, Jun and Yu, Kai and Li, Lei and Li, Ming and Chen, Qianfeng and Li, Xi and Cao, Xudong and Wang, Zhongyuan and Zha, Zhengjun and Zhuang, Yueting and Pan, Yunhe},
   journal = {Nature Machine Intelligence},
-  title   = {Towards a new generation of artificial intelligence in China},
+  title   = {Towards a new generation of artificial intelligence in {China}},
   year    = {2020},
   month   = jun,
   pages   = {312-316},
@@ -198,7 +208,7 @@
 
 @InProceedings{yang2020towards,
   author    = {Jiacheng Yang and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Weinan Zhang and Yong Yu and Lei Li},
-  booktitle = {the 34th {AAAI} Conference on Artificial Intelligence (AAAI)},
+  booktitle = {the 34th {AAAI} Conference on Artificial Intelligence ({AAAI})},
   title     = {Towards Making the Most of {BERT} in Neural Machine Translation},
   year      = {2020},
   month     = feb,
@@ -212,13 +222,6 @@ Our proposed \method consists of three techniques:
 \end{inparaenum}
 Our experiments in machine translation show \method gains of up to 3 BLEU score on the WMT14 English-German language pair which even surpasses the previous state-of-the-art pre-training aided NMT by 1.4 BLEU score.
 While for the large WMT14 English-French task with 40 millions of sentence-pairs, our base model still significantly improves upon the state-of-the-art Transformer big model by more than 1 BLEU score.},
-}
-
-@TechReport{wang2019solo,
-  author = {Xinlong Wang and Tao Kong and Chunhua Shen and Yuning Jiang and Lei Li},
-  title  = {{SOLO}: Segmenting Objects by Locations},
-  year   = {2019},
-  url    = {https://arxiv.org/abs/1912.04488},
 }
 
 @InProceedings{miao2019kernelized,
@@ -818,14 +821,14 @@ proposed method can obtain more accurate text classification results.},
 
 @Article{li2010efficient,
   author    = {Li, Lei and Fu, Bin and Faloutsos, Christos},
-  title     = {Efficient Parallel Learning of Hidden Markov Chain Models on SMPs},
   journal   = {IEICE Transactions on Information and Systems},
+  title     = {Efficient Parallel Learning of Hidden {Markov} chain Models on {SMP}s},
   year      = {2010},
-  volume    = {E93.D},
   number    = {6},
   pages     = {1330--1342},
-  comment      = {This one is applying the idea from Cut-And-Stitch paper from linear dynamical system to hidden markov models. The extended version can be found in my thesis Chapter 6 and 7.},
+  volume    = {E93.D},
   abstract  = {Quad-core cpus have been a common desktop configuration for today’s office. The increasing number of processors on a single chip opens new opportunity for parallel computing. Our goal is to make use of the multi-core as well as multi-processor architectures to speed up large-scale data mining algorithms. In this paper, we present a general par- allel learning framework, Cut-And-Stitch, for training hidden Markov chain models. Particularly, we propose two model-specific variants, CAS-LDS for learning linear dynamical systems (LDS) and CAS-HMM for learning hidden Markov models (HMM). Our main contribution is a novel method to handle the data dependencies due to the chain structure of hidden variables, so as to parallelize the EM-based parameter learning algorithm. We imple- ment CAS-LDS and CAS-HMM using OpenMP on two supercomputers and a quad-core commercial desktop. The experimental results show that parallel algorithms using Cut-And-Stitch achieve comparable accuracy and almost linear speedups over the traditional serial version.},
+  comment   = {This one is applying the idea from Cut-And-Stitch paper from linear dynamical system to hidden markov models. The extended version can be found in my thesis Chapter 6 and 7.},
   file      = {:pubs/li2010efficient - Efficient Parallel Learning of Hidden Markov Chain Models on SMPs.pdf:PDF},
   owner     = {leili},
   timestamp = {2011.03.05},
