adding akbc paper

--- a/leili.bib
+++ b/leili.bib
@@ -144,6 +144,16 @@
   url          = {https://xiaomingbot.github.io},
 }
 
+@InProceedings{hua2020xref,
+  author    = {Xinyu Hua and Lei Li and Lifeng Hua and Lu Wang},
+  booktitle = {Automated Knowledge Base Construction (AKBC)},
+  title     = {{XREF}: Entity Linking for {Chinese} News Comments with Supplementary Article Reference},
+  year      = {2020},
+  month     = jun,
+  abstract  = {Automatic identification of mentioned entities in social media posts facilitates quick digestion of trending topics and popular opinions. Nonetheless, this remains a challenging task due to limited context and diverse name variations. In this paper, we study the problem of entity linking for Chinese news comments given mentions’ spans. We hypothesize that comments often refer to entities in the corresponding news article, as well as topics involving the entities. We therefore propose a novel model, XREF, that leverages attention mechanisms to (1) pinpoint relevant context within comments, and (2) detect supporting entities from the news article. To improve training, we make two contributions: (a) we propose a supervised attention loss in addition to the standard cross entropy, and (b) we develop a weakly supervised training scheme to utilize the large-scale unlabeled corpus. Two new datasets in entertainment and product domains are collected and annotated for experiments. Our proposed method outperforms previous methods on both datasets.},
+  url       = {https://xinyuhua.github.io/Resources/akbc20/},
+}
+
 @Article{wu2020towards,
   author  = {Wu, Fei and Lu, Cewu and Zhu, Mingjie and Chen, Hao and Zhu, Jun and Yu, Kai and Li, Lei and Li, Ming and Chen, Qianfeng and Li, Xi and Cao, Xudong and Wang, Zhongyuan and Zha, Zhengjun and Zhuang, Yueting and Pan, Yunhe},
   journal = {Nature Machine Intelligence},
