--- a/leili.bib
+++ b/leili.bib
@@ -40,7 +40,7 @@
   year    = {2020},
   issn    = {1057-7149},
   pages   = {1-10},
-  doi     = {10.1109/TIP.2020.3002345},
+  doi     = {https://doi.org/10.1109/TIP.2020.3002345},
 }
 
 @Unpublished{li2020bidirectional,
@@ -162,7 +162,8 @@
   month   = jun,
   pages   = {312-316},
   volume  = {2},
-  doi     = {10.1038/s42256-020-0183-4},
+  doi     = {https://doi.org/10.1038/s42256-020-0183-4},
+  url     = {https://rdcu.be/b5vk7},
 }
 
 @InProceedings{ye2020variational,
